--- a/Invessence/modules/web/src/main/webapp/pages/custody/td/accttype.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/td/accttype.xhtml
@@ -10,7 +10,7 @@
         <p:panel rendered="#{tdcto.getErrorMessage(0) != null}"
                  style="border: 0px; background: transparent"
                  styleClass="Container100">
-            <h:outputText styleClass="errorText"
+            <h:outputText id="tdp0Msg" styleClass="errorText"
                           value="#{tdcto.getErrorMessage(0)}" escape="false"/>
         </p:panel>
 
@@ -23,7 +23,8 @@
 
             <div class="Container45 Responsive100 LeftBlockAcctType Fleft">
                 <div class="Container100 CustomWidthAccountypePanel">
-                    <p:commandLink actionListener="#{tdcto.selectAcctType(1)}"
+                    <p:commandLink id="tdat1"
+                                   actionListener="#{tdcto.selectAcctType(1)}"
                                    process="@this"
                                    update=":ctoForm:tdaccordian:acctTypePanel"  >
                         <p:panel styleClass="Wid95 Fleft MarCenter tcmPanel-UI">
@@ -41,7 +42,8 @@
 
                 </div>
                 <div class="Container100 CustomWidthAccountypePanel">
-                    <p:commandLink actionListener="#{tdcto.selectAcctType(2)}"
+                    <p:commandLink id="tdat2"
+                                   actionListener="#{tdcto.selectAcctType(2)}"
                                    process="@this"
                                    update=":ctoForm:tdaccordian:acctTypePanel">
                         <p:panel styleClass="Wid95 MarCenter tcmPanel-UI">
@@ -58,7 +60,8 @@
                     </p:commandLink>
                 </div>
                 <div class="Container100 CustomWidthAccountypePanel">
-                    <p:commandLink actionListener="#{tdcto.selectAcctType(3)}"
+                    <p:commandLink id="tdat3"
+                                   actionListener="#{tdcto.selectAcctType(3)}"
                                    process="@this"
                                    update=":ctoForm:tdaccordian:acctTypePanel">
                         <p:panel styleClass="Wid95 MarCenter tcmPanel-UI">
@@ -77,7 +80,8 @@
             </div>
             <div class="Container45 Responsive100 FrightForced RightBlockAcctType">
                 <div class="Container100 CustomWidthAccountypePanel">
-                    <p:commandLink actionListener="#{tdcto.selectAcctType(4)}"
+                    <p:commandLink id="tdat4"
+                                   actionListener="#{tdcto.selectAcctType(4)}"
                                    process="@this"
                                    update=":ctoForm:tdaccordian:acctTypePanel">
                         <p:panel styleClass="Wid95 MarCenter tcmPanel-UI">
@@ -96,7 +100,8 @@
 
 
                 <div class="Container100 CustomWidthAccountypePanel">
-                    <p:commandLink actionListener="#{tdcto.selectAcctType(5)}"
+                    <p:commandLink id="tdat5"
+                                   actionListener="#{tdcto.selectAcctType(5)}"
                                    process="@this"
                                    update=":ctoForm:tdaccordian:acctTypePanel">
                         <p:panel styleClass="Wid95 MarCenter tcmPanel-UI">
@@ -115,7 +120,8 @@
 
 
                 <div class="Container100 CustomWidthAccountypePanel">
-                    <p:commandLink actionListener="#{tdcto.selectAcctType(6)}"
+                    <p:commandLink id="tdat6"
+                                   actionListener="#{tdcto.selectAcctType(6)}"
                                    process="@this"
                                    update=":ctoForm:tdaccordian:acctTypePanel">
                         <p:panel styleClass="Wid95 MarCenter tcmPanel-UI">
@@ -134,7 +140,8 @@
 
 
                 <div class="Container100 CustomWidthAccountypePanel" >
-                    <p:commandLink actionListener="#{tdcto.selectAcctType(7)}"
+                    <p:commandLink id="tdat7"
+                                   actionListener="#{tdcto.selectAcctType(7)}"
                                    process="@this"
                                    update=":ctoForm:tdaccordian:acctTypePanel">
                         <p:panel styleClass="Wid95 MarCenter tcmPanel-UI">
@@ -155,7 +162,8 @@
             <div class="Container100 MarTop20 acctTypeBtnNxt" style="margin: 10px 10px;">
 
 
-                <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
+                <p:commandLink id="tdp0next"
+                               styleClass="UI-nextButtonFA Fright UI-tcmButton"
                                actionListener="#{tdcto.nextPage}"
                                update=":ctoForm:tdaccordian, :ctoForm:errorMsg,:ctoForm:submitBtnId"
                                process=":ctoForm:tdaccordian:acctTypePanel"/>
