--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/final2.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/final2.xhtml
@@ -6,11 +6,6 @@
 	xmlns:pe="http://primefaces.org/ui/extensions">
 
 	<!-- BOX START -->
-	<script type="text/javascript">
-		$(document).ready(function() {
-			drawProjectionChart("final2");//pass page info for reuse js method
-		});
-	</script>
 
 	<p:outputPanel id="workArea">
 		<p:fieldset legend="Summary" toggleable="true" toggleSpeed="500">
@@ -33,128 +28,148 @@
 							tolerance, I would rather directly choose my investment strategy
 							and am familiar with the associated risks. The strategy I choose
 							is:</div>
-						<div class="EmptyBox40"></div>
-						<div class="Container100 DispBlock gray">
-
-							<div class="Container25 TexAlRight Fs14 uobSliderLabel firstLabel">
-								Conservative</div>
-							<div class="Container50 TexAlCenter Fs20">
-								<h:inputHidden id="allocValue" value="#{uobpb.allocationIndex}" />
-								<p:slider id="allocSlider" for="allocValue" minValue="0"
-									maxValue="#{uobpb.maxAssetAllocatonPoints}" step="1">
-
-								</p:slider>
+						<p:panel id="tcmSliderArea" style="border: 0px; background: transparent;">
+							<div class="EmptyBox10"></div>
+							<div class="Container100 Fleft TexAlCenter"
+								 style="padding: 0px 20px; box-sizing: border-box;">
+								<strong>#{tcmpb.fixedModelName}</strong>
 							</div>
-							<div class="Container25 TexAlLeft Fs14 uobSliderLabel lastLabel">
-								Aggressive</div>
-							<div class="EmptyBox5"></div>
-							<div class="Container100 TexAlCenter">
-								<div class="ContainerIndent">
-									<p:commandButton id="allocSliderResetButton"
-										value="Recommended" styleClass="uob_button">
-									</p:commandButton>
+							<div class="EmptyBox20"></div>
+							<div class="Container100 DispBlock gray">
+
+								<div class="Container25 TexAlRight Fs14 uobSliderLabel firstLabel">
+									Conservative</div>
+								<div class="Container50 TexAlCenter Fs20">
+									<h:inputHidden id="allocValue" value="#{tcmpb.allocationIndex}" />
+									<p:slider id="allocSlider" for="allocValue" minValue="0"
+											  maxValue="#{tcmpb.maxAssetAllocatonPoints}" step="1">
+										<p:ajax event="slideEnd"
+												update="ceForm:graphArea, ceForm:tcmFinal, ceForm:tcmSliderArea"
+												listener="#{tcmpb.onAllocSlider}" />
+									</p:slider>
+								</div>
+								<div class="Container25 TexAlLeft Fs14 uobSliderLabel lastLabel">
+									Aggressive</div>
+								<div class="EmptyBox5"></div>
+								<div class="Container100 TexAlCenter">
+									<div class="ContainerIndent">
+										<p:commandButton id="allocSliderResetButton" value="Recommended"
+														 styleClass="uob_button"
+														 update=":ceForm:tcmSliderArea, :ceForm:graphArea, ceForm:tcmFinal"
+														 actionListener="#{tcmpb.doAllocReset}"/>
+									</div>
 								</div>
 							</div>
-						</div>
+
+						</p:panel>
 					</p:panel>
 
 
 
+					<p:panel id="tcmFinal" style="border: 0px; background: transparent;">
+						<div class="Container100 Fleft TexAlCenter ResMArTop"
+							 style="padding: 0px 20px; box-sizing: border-box;">
+							Based on the responses that you have given, we have selected the <strong>#{tcmpb.fixedModelName}</strong>
+							strategy for you.
+						</div>
+						<div class="EmptyBox70 ResEmptyBox30"></div>
+						<div class="Container100">
+							<p:outputPanel deferred="true">
+								<div class="Container50 Fleft spResPieBlock">
+									<p:chart type="pie" model="#{tcmpb.charts.pieChart}"
+											 style="height: 100%; width: 100%;"
+											 rendered="#{tcmpb.charts.pieChart != null}" responsive="true" />
+								</div>
+								<div class="Container40 Fright assetAllocationTableMobView spResPieTableBlock">
+									<p:dataTable styleClass="invAllocTable"
+												 value="#{tcmpb.editableAsset}" var="assetList">
 
-					<div class="Container100 Fleft TexAlCenter ResMArTop"
-						style="padding: 0px 20px; box-sizing: border-box;">
-						Based on the responses that you have given, we have selected the <strong>#{tcmpb.fixedModelName}</strong>
-						strategy for you.
-					</div>
-					<div class="EmptyBox70 ResEmptyBox30"></div>
-					<div class="Container100">
-						<p:outputPanel deferred="true">
-							<div class="Container50 Fleft spResPieBlock">
-								<p:chart type="pie" model="#{tcmpb.charts.pieChart}"
-									style="height: 100%; width: 100%;"
-									rendered="#{tcmpb.charts.pieChart != null}" responsive="true" />
-							</div>
-							<div class="Container40 Fright assetAllocationTableMobView spResPieTableBlock">
-								<p:dataTable styleClass="invAllocTable"
-									value="#{tcmpb.editableAsset}" var="assetList">
+										<p:column
+												style="width: 1%; background-color: #{assetList.color};">
+											<h:outputText value=" " />
+										</p:column>
 
-									<p:column
-										style="width: 1%; background-color: #{assetList.color};">
-										<h:outputText value=" " />
-									</p:column>
-
-									<p:column styleClass="Fs12 TexAlLeft" headerText="Class">
-										<h:outputText value="#{assetList.asset}" />
-									</p:column>
-									<!--  <p:column priority="3"
-                                                  styleClass="Wid15 Fs14 num-text-align TexAlRight"
-                                                  headerText="Weight">
-                                            <h:outputText value="#{assetList.userEdit}">
-                                                <f:convertNumber pattern="##0%"/>
-                                            </h:outputText>
-                                        </p:column> -->
-									<p:column styleClass="Fs12 num-text-align TexAlRight"
-										headerText="Value">
-										<h:outputText value="#{assetList.value}">
-											<f:convertNumber pattern="$#,###,###" />
-										</h:outputText>
-									</p:column>
-									<p:columnGroup type="footer">
-										<p:row>
-											<p:column />
-											<p:column styleClass="Fs12 TexAlLeft FontBold"
-												footerText="Total">
-											</p:column>
-											<p:column styleClass="Fs12 TexAlRight FontBold"
-												footerText="#{dataDisplayConverter.displayAsMoneyRounded(tcmpb.totalMoneyAllocated)}">
-											</p:column>
-										</p:row>
-									</p:columnGroup>
-								</p:dataTable>
-							</div>
-						</p:outputPanel>
-					</div>
+										<p:column styleClass="Fs12 TexAlLeft" headerText="Class">
+											<h:outputText value="#{assetList.asset}" />
+										</p:column>
+										<!--  <p:column priority="3"
+                                                      styleClass="Wid15 Fs14 num-text-align TexAlRight"
+                                                      headerText="Weight">
+                                                <h:outputText value="#{assetList.userEdit}">
+                                                    <f:convertNumber pattern="##0%"/>
+                                                </h:outputText>
+                                            </p:column> -->
+										<p:column styleClass="Fs12 num-text-align TexAlRight"
+												  headerText="Value">
+											<h:outputText value="#{assetList.value}">
+												<f:convertNumber pattern="$#,###,###" />
+											</h:outputText>
+										</p:column>
+										<p:columnGroup type="footer">
+											<p:row>
+												<p:column />
+												<p:column styleClass="Fs12 TexAlLeft FontBold"
+														  footerText="Total">
+												</p:column>
+												<p:column styleClass="Fs12 TexAlRight FontBold"
+														  footerText="#{dataDisplayConverter.displayAsMoneyRounded(tcmpb.totalMoneyAllocated)}">
+												</p:column>
+											</p:row>
+										</p:columnGroup>
+									</p:dataTable>
+								</div>
+							</p:outputPanel>
+						</div>
+					</p:panel>
 				</div>
-				<div class="Container50 Responsive100 FrightForced performanceChartBlock">
-					<div class="Container100">
-						<div class="Container45 Res100MP TexAlCenter Fleft UI-tcm">
-							<div class="ContainerIndent">
-								<div class="EmptyBox5"></div>
+				<div id="projectChartArea" class="Container50 Responsive100 FrightForced performanceChartBlock">
+					<p:outputPanel id="graphArea" style="border: 0px; background: transparent;">
+						<script type="text/javascript">
+							$(document).ready(function() {
+								drawProjectionChart("final2");//pass page info for reuse js method
+							});
+						</script>
+
+						<div class="Container100">
+							<div class="Container45 Res100MP TexAlCenter Fleft UI-tcm">
+								<div class="ContainerIndent">
+									<div class="EmptyBox5"></div>
 								<span class="Fs14 DispBlock gray">Average Market
 									Performance</span>
 
-								<div class="EmptyBox5"></div>
+									<div class="EmptyBox5"></div>
 								<span class="Fs17 DispBlock BBGreen"> <h:outputText
 										value="#{tcmpb.charts.chartdata.getIntChartData('AvgPerformance')}">
-										<f:convertNumber pattern="$#,###,###,##0" />
-									</h:outputText>
+									<f:convertNumber pattern="$#,###,###,##0" />
+								</h:outputText>
 								</span>
+								</div>
 							</div>
-						</div>
 
-						<div
-							class="Container45 Res100MP FrightForced TexAlCenter UI-tcm MarTopRes">
-							<div class="ContainerIndent">
-								<div class="EmptyBox5"></div>
-								<span class="Fs14 DispBlock gray">Poor Market Performance</span>
+							<div
+									class="Container45 Res100MP FrightForced TexAlCenter UI-tcm MarTopRes">
+								<div class="ContainerIndent">
+									<div class="EmptyBox5"></div>
+									<span class="Fs14 DispBlock gray">Poor Market Performance</span>
 
-								<div class="EmptyBox5"></div>
+									<div class="EmptyBox5"></div>
 								<span class="Fs17 DispBlock BBGreen"> <h:outputText
 										value="#{tcmpb.charts.chartdata.getIntChartData('PoorPerformance')}">
-										<f:convertNumber pattern="$#,###,###,##0" />
-									</h:outputText>
+									<f:convertNumber pattern="$#,###,###,##0" />
+								</h:outputText>
 								</span>
+								</div>
 							</div>
 						</div>
-					</div>
-					<div class="EmptyBox10"></div>
+						<div class="EmptyBox10"></div>
 
-					<h:inputHidden value="#{tcmpb.charts.chartdata.highChartresultSet}"
-						id="performanceChart" />
+						<h:inputHidden value="#{tcmpb.charts.chartdata.highChartresultSet}"
+									   id="performanceChart" />
 
-					<div id="progressChart" class="Fright Wid100">
-						<!-- Performance Chart Zone -->
-					</div>
+						<div id="progressChart" class="Fright Wid100">
+							<!-- Performance Chart Zone -->
+						</div>
+					</p:outputPanel>
 				</div>
 
 			</div>
